--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
