--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/firefox-webext-browser": "^82.0.0",
     "@types/node": "^15.3.1",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
