--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,25 @@
 {
-  "name": "React App",
-  "lang": "en-US",
-  "icons": [
+  "manifest_version": 2,
+  "name": "web memo",
+  "version": "1.0.0",
+  "description": "save highlighted text on the web",
+  "icons": {
+    "48": "favicon.svg",
+    "96": "favicon.svg"
+  },
+  "browser_action": {
+    "default_icon": "favicon.svg",
+    "default_title": "web memo"
+  },
+  "background": {
+    "scripts": ["background.js"]
+  },
+
+  "content_scripts": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"]
     }
   ],
-  "start_url": ".",
-  "display": "standalone"
+  "permissions": ["storage"]
 }
