--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --config webpack/webpack.config.js --config webpack/webpack.dev.js --merge",
-    "build": "webpack --config webpack/webpack.config.js --config webpack/webpack.prod.js --merge "
+    "build": "webpack --config webpack/webpack.config.js --config webpack/webpack.prod.js --merge && yarn webext-background",
+    "webext-background": "webpack --config webpack/webpack.background.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "dexie": "^3.0.3",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
