--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --config webpack/webpack.config.js --config webpack/webpack.dev.js --merge",
-    "build": "webpack --config webpack/webpack.config.js --config webpack/webpack.prod.js --merge && yarn webext-background",
-    "webext-background": "webpack --config webpack/webpack.background.js"
+    "build": "webpack --config webpack/webpack.config.js --config webpack/webpack.prod.js --merge && yarn webext-background && yarn popup",
+    "webext-background": "webpack --config webpack/webpack.background.js",
+    "popup": "webpack --config webpack/webpack.popup.js"
   },
   "keywords": [],
   "author": "",
