--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,9 @@
   },
   "browser_action": {
     "default_icon": "favicon.svg",
-    "default_title": "web memo"
+    "default_title": "web memo",
+    "default_popup": "popup/index.html",
+    "browser_style": true
   },
   "background": {
     "scripts": ["background.js"]
