--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/montserrat": "^4.4.5",
+    "@fontsource/raleway": "^4.4.5",
     "dexie": "^3.0.3",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
