--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "web memo",
+  "name": "Web Notes",
   "version": "1.0.0",
   "description": "save highlighted text on the web",
   "icons": {
@@ -11,12 +11,18 @@
   },
   "browser_action": {
     "default_icon": "favicon.svg",
-    "default_title": "web memo",
+    "default_title": "Web Notes",
     "default_popup": "popup/index.html",
     "browser_style": true
   },
   "background": {
     "scripts": ["background.js"]
   },
-  "permissions": ["storage", "menus", "contextMenus", "tabs"]
+  "permissions": ["storage", "menus", "contextMenus", "tabs"],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "web-notes@w.h.com",
+      "strict_min_version": "85.0"
+    }
+  }
 }
