--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Web Notes",
+  "name": "Web Memo",
   "version": "1.0.0",
-  "description": "save highlighted text on the web",
+  "description": "right click and save any text on the web",
   "icons": {
     "16": "favicon.svg",
     "32": "favicon.svg",
@@ -11,7 +11,7 @@
   },
   "browser_action": {
     "default_icon": "favicon.svg",
-    "default_title": "Web Notes",
+    "default_title": "Web Memo",
     "default_popup": "popup/index.html",
     "browser_style": true
   },
@@ -21,8 +21,7 @@
   "permissions": ["storage", "menus", "contextMenus", "tabs"],
   "browser_specific_settings": {
     "gecko": {
-      "id": "web-notes@w.h.com",
-      "strict_min_version": "85.0"
+      "id": "web-notes@w.h.com"
     }
   }
 }
