--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --config webpack/webpack.config.js --config webpack/webpack.dev.js --merge",
     "build": "webpack --config webpack/webpack.config.js --config webpack/webpack.prod.js --merge && yarn webext-background && yarn popup",
     "webext-background": "webpack --config webpack/webpack.background.js",
     "popup": "webpack --config webpack/webpack.popup.js"
@@ -55,7 +54,6 @@
     "style-loader": "^2.0.0",
     "typescript": "^4.2.4",
     "webpack": "^5.37.1",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.7.0"
   }
 }
