--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memo",
+  "name": "web-memo",
   "version": "1.0.0",
   "private": "true",
   "description": "",
@@ -10,7 +10,7 @@
     "popup": "webpack --config webpack/webpack.popup.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "wael H",
   "license": "ISC",
   "dependencies": {
     "@chakra-ui/react": "^1.6.4",
@@ -30,7 +30,6 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/firefox-webext-browser": "^82.0.0",
     "@types/node": "^15.3.1",
     "@types/react": "^17.0.6",
@@ -50,7 +49,6 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.1",
-    "react-refresh": "^0.10.0",
     "style-loader": "^2.0.0",
     "typescript": "^4.2.4",
     "webpack": "^5.37.1",
