--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-memo",
   "version": "1.0.0",
   "private": "true",
-  "description": "",
+  "description": "web extension to create and manage notes",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack/webpack.config.js --config webpack/webpack.prod.js --merge && yarn webext-background && yarn popup",
