--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/montserrat": "^4.4.5",
     "@fontsource/raleway": "^4.4.5",
     "dexie": "^3.0.3",
+    "dompurify": "^2.3.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,6 +31,7 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/dompurify": "^2.2.3",
     "@types/firefox-webext-browser": "^82.0.0",
     "@types/node": "^15.3.1",
     "@types/react": "^17.0.6",
