--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Web Memo",
   "version": "1.0.0",
-  "description": "select and save web content with automatically filled notes , categorized by website",
+  "description": "create notes from selected text , save copied images and screenshots",
   "icons": {
     "16": "favicon.svg",
     "32": "favicon.svg",
@@ -21,8 +21,7 @@
   "permissions": ["storage", "menus", "contextMenus", "tabs"],
   "browser_specific_settings": {
     "gecko": {
-      "id": "web-memo@w.h.com",
-      "strict_min_version": "80"
+      "id": "web-memo@w.h.com"
     }
   }
 }
