--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,8 +11,12 @@
   },
   "browser_action": {
     "default_icon": "favicon.svg",
+    "default_title": "Web Memo"
+  },
+  "sidebar_action": {
+    "default_icon": "favicon.svg",
     "default_title": "Web Memo",
-    "default_popup": "popup/index.html",
+    "default_panel": "popup/index.html",
     "browser_style": true
   },
   "background": {
