--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "web extension to create and manage notes",
   "license": "MPL 2.0",
   "scripts": {
-    "build": "yarn main && yarn background && yarn sidebar",
-    "main": "webpack --config webpack/webpack.config.js",
-    "background": "webpack --config webpack/webpack.background.js",
-    "sidebar": "webpack --config webpack/webpack.sidebar.js"
+    "build": "yarn main && yarn sidebar && yarn background && yarn copy",
+    "main": "node configs/main.js",
+    "background": "node configs/background.js",
+    "sidebar": "node configs/sidebar.js",
+    "copy": "node configs/copyFiles.js"
   },
   "author": "wael H",
   "dependencies": {
@@ -37,11 +38,8 @@
     "@types/react-dom": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.0",
-    "css-loader": "^5.2.5",
     "dotenv": "^10.0.0",
+    "esbuild": "^0.13.8",
     "eslint": "^7.26.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.7.2",
@@ -49,10 +47,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "style-loader": "^2.0.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.7.0"
+    "typescript": "^4.2.4"
   }
 }
