--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dexie": "^3.0.3",
     "dompurify": "^2.3.0",
     "framer-motion": "^4.1.17",
+    "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
