--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "main": "node configs/main.js",
     "background": "node configs/background.js",
     "sidebar": "node configs/sidebar.js",
-    "copy": "node configs/copyFiles.js"
+    "copy": "node configs/copyFiles.js",
+    "lint": "eslint . --ext .ts"
   },
   "author": "wael H",
   "dependencies": {
@@ -33,17 +34,15 @@
     "@types/node": "^15.3.1",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "dotenv": "^10.0.0",
     "esbuild": "^0.13.11",
-    "eslint": "^8.1.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.7.2",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint": "^8.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "^4.2.4"
   }
 }
