--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   },
   "author": "wael H",
   "dependencies": {
-    "@chakra-ui/react": "^1.6.4",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fontsource/open-sans": "^4.5.0",
     "@fontsource/raleway": "^4.4.5",
     "dexie": "^3.0.3",
+    "dexie-export-import": "^1.0.3",
     "dompurify": "^2.3.0",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^5.5.7",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
