--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,31 +1,30 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Web Memo",
-  "version": "1.1.0",
-  "description": "create notes from selected text , save copied images and screenshots",
+  "version": "1.0.0",
+  "description": "right click and save any text on the web",
   "icons": {
-    "16": "favicon.svg",
-    "32": "favicon.svg",
-    "48": "favicon.svg",
-    "96": "favicon.svg"
+    "16": "favicon-16x16.png",
+    "32": "favicon-32x32.png",
+    "48": "favicon-48x48.png",
+    "64": "favicon-64x64.png",
+    "96": "favicon-96x96.png",
+    "128": "favicon-128x128.png"
   },
-  "browser_action": {
-    "default_icon": "favicon.svg",
-    "default_title": "Web Memo"
-  },
-  "sidebar_action": {
-    "default_icon": "favicon.svg",
+  "action": {
+    "default_icon": "favicon-64x64.png",
     "default_title": "Web Memo",
-    "default_panel": "sidebar/index.html",
+    "default_popup": "sidebar/index.html",
     "browser_style": true
   },
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
   },
-  "permissions": ["storage", "menus", "contextMenus", "tabs", "downloads"],
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "web-memo@w.h.com"
+  "content_scripts": [
+    {
+      "matches": ["*://*/*"],
+      "js": ["content-script.js"]
     }
-  }
+  ],
+  "permissions": ["storage", "contextMenus", "tabs", "downloads"]
 }
