build content script

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "web extension to create and manage notes",
   "license": "MPL 2.0",
   "scripts": {
-    "build": "yarn main && yarn sidebar && yarn background && yarn copy",
+    "build": "yarn main && yarn sidebar && yarn background && yarn content-scripts && yarn copy",
     "main": "node configs/main.js",
     "background": "node configs/background.js",
     "sidebar": "node configs/sidebar.js",
+    "content-scripts": "node configs/contentScripts.js",
     "copy": "node configs/copyFiles.js",
     "lint": "eslint . --ext .ts"
   },
