refactor build process / watch mode

--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "description": "web extension to create and manage notes",
   "license": "MPL 2.0",
   "scripts": {
-    "build": "yarn main && yarn sidebar && yarn background && yarn copy",
-    "main": "node configs/main.js",
-    "background": "node configs/background.js",
-    "sidebar": "node configs/sidebar.js",
-    "copy": "node configs/copyFiles.js",
+    "build": "node configs/main.js",
+    "watch": "node configs/main.js -watch",
     "lint": "eslint . --ext .ts"
   },
   "author": "wael H",
