--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MPL 2.0",
   "scripts": {
     "build": "node configs/main.js",
+    "watch": "node configs/main.js -watch",
     "lint": "eslint . --ext .ts"
   },
   "author": "wael H",
