--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Web Memo",
-  "version": "1.1.0",
-  "description": "create notes from selected text , save copied images and screenshots",
+  "version": "1.2.0",
+  "description": "Generate collections and notes from text selection / save copied images and screenshots",
   "icons": {
     "16": "favicon.svg",
     "32": "favicon.svg",
