--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "roosterjs-editor-api": "^8.17.0",
+    "roosterjs-editor-core": "^8.17.0",
     "zustand": "^3.5.5"
   },
   "devDependencies": {
