--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "web extension to create and manage notes",
   "license": "MPL 2.0",
   "scripts": {
-    "build": "node configs/main.js",
+    "build": "tsc && node configs/main.js",
     "watch": "node configs/main.js -watch",
     "lint": "eslint . --ext .ts",
     "tsc": "tsc"
