--- a/package.json
+++ b/package.json
@@ -12,38 +12,38 @@
   },
   "author": "wael H",
   "dependencies": {
-    "@chakra-ui/react": "^1.7.4",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/open-sans": "^4.5.0",
-    "@fontsource/raleway": "^4.4.5",
-    "dexie": "^3.0.3",
+    "@chakra-ui/react": "^2.1.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/open-sans": "^4.5.10",
+    "@fontsource/raleway": "^4.5.8",
+    "dexie": "^3.2.2",
     "dexie-export-import": "^1.0.3",
-    "dompurify": "^2.3.0",
-    "framer-motion": "^5.5.7",
-    "immer": "^9.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "roosterjs-editor-api": "^8.17.0",
-    "roosterjs-editor-core": "^8.17.0",
-    "zustand": "^3.5.5"
+    "dompurify": "^2.3.8",
+    "framer-motion": "^6.3.3",
+    "immer": "^9.0.14",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "roosterjs-editor-api": "^8.22.1",
+    "roosterjs-editor-core": "^8.22.1",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.178",
-    "@types/dompurify": "^2.2.3",
-    "@types/firefox-webext-browser": "^82.0.0",
-    "@types/node": "^15.3.1",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "dotenv": "^10.0.0",
-    "esbuild": "^0.13.11",
-    "eslint": "^8.4.1",
+    "@types/chrome": "^0.0.188",
+    "@types/dompurify": "^2.3.3",
+    "@types/firefox-webext-browser": "^94.0.1",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "dotenv": "^16.0.1",
+    "esbuild": "^0.14.39",
+    "eslint": "^8.16.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "^4.2.4"
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "typescript": "^4.6.4"
   }
 }
