--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@chakra-ui/react": "^2.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@fontsource/open-sans": "^4.5.10",
     "@fontsource/raleway": "^4.5.8",
+    "@fontsource/rubik": "^4.5.9",
     "dexie": "^3.2.2",
     "dexie-export-import": "^1.0.3",
     "dompurify": "^2.3.8",
