--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "author": "wael H",
   "dependencies": {
-    "@chakra-ui/react": "^2.1.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fontsource/raleway": "^4.5.8",
     "@fontsource/rubik": "^4.5.9",
     "dexie": "^3.2.2",
@@ -45,5 +45,13 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "typescript": "^4.6.4"
+  },
+  "packageManager": "pnpm@7.5.1",
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@babel/core"
+      ]
+    }
   }
 }
