--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Web Memo",
   "version": "1.3.4",
-  "description": "Generate collections and notes from text selection / save copied images and screenshots",
+  "description": "create notes and collections from websites you visit",
   "icons": {
     "16": "favicon.svg",
     "32": "favicon.svg",
