update esbuild , chakra , framer motion

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "author": "wael H",
   "dependencies": {
-    "@chakra-ui/react": "^2.2.4",
+    "@chakra-ui/react": "^2.2.9",
+    "@chakra-ui/styled-system": "^2.2.8",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/raleway": "^4.5.8",
@@ -20,7 +21,7 @@
     "dexie": "^3.2.2",
     "dexie-export-import": "^1.0.3",
     "dompurify": "^2.3.8",
-    "framer-motion": "^6.3.3",
+    "framer-motion": "^7.2.1",
     "immer": "^9.0.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -39,7 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "dotenv": "^16.0.1",
-    "esbuild": "^0.14.39",
+    "esbuild": "^0.15.5",
     "eslint": "^8.16.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
