--- a/package.json
+++ b/package.json
@@ -13,39 +13,39 @@
   "author": "wael H",
   "dependencies": {
     "@chakra-ui/react": "^2.2.9",
-    "@chakra-ui/styled-system": "^2.2.8",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@fontsource/raleway": "^4.5.8",
-    "@fontsource/rubik": "^4.5.9",
-    "dexie": "^3.2.2",
-    "dexie-export-import": "^1.0.3",
-    "dompurify": "^2.3.8",
-    "framer-motion": "^7.2.1",
-    "immer": "^9.0.14",
+    "@chakra-ui/styled-system": "^2.9.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/raleway": "^5.0.3",
+    "@fontsource/rubik": "^5.0.3",
+    "dexie": "^3.2.4",
+    "dexie-export-import": "^4.0.7",
+    "dompurify": "^3.0.3",
+    "framer-motion": "^10.12.16",
+    "immer": "^10.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "roosterjs-editor-api": "^8.22.1",
     "roosterjs-editor-core": "^8.22.1",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.188",
-    "@types/dompurify": "^2.3.3",
-    "@types/firefox-webext-browser": "^94.0.1",
-    "@types/node": "^17.0.35",
+    "@types/chrome": "^0.0.237",
+    "@types/dompurify": "^3.0.2",
+    "@types/firefox-webext-browser": "^111.0.1",
+    "@types/node": "^18.16.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "dotenv": "^16.0.1",
-    "esbuild": "^0.15.5",
-    "eslint": "^8.16.0",
+    "esbuild": "^0.18.4",
+    "eslint": "^8.42.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "typescript": "^4.6.4"
+    "typescript": "^5.1.3"
   },
   "pnpm": {
     "peerDependencyRules": {
