--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@chakra-ui/styled-system": "^2.9.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/raleway": "^5.0.4",
+    "@fontsource-variable/rubik": "^5.0.4",
     "@fontsource/raleway": "^5.0.3",
     "@fontsource/rubik": "^5.0.3",
     "dexie": "^3.2.4",
     "dexie-export-import": "^4.0.7",
     "dompurify": "^3.0.3",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^7.2.1",
     "immer": "^10.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
