--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Web Memo",
-  "version": "1.3.5",
+  "version": "1.4.0",
   "description": "create notes and collections from websites you visit",
   "icons": {
     "16": "favicon.svg",
@@ -9,15 +9,14 @@
     "48": "favicon.svg",
     "96": "favicon.svg"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "favicon.svg",
     "default_title": "Web Memo"
   },
   "sidebar_action": {
     "default_icon": "favicon.svg",
     "default_title": "Web Memo",
-    "default_panel": "sidebar/index.html",
-    "browser_style": true
+    "default_panel": "sidebar/index.html"
   },
   "background": {
     "scripts": ["background-scripts/background.js"]
